# mng

./: .dockerignore  .gitignore  .offload-base-commit  .offload-image-cache  .pre-commit-config.yaml  .test_durations  ARCHITECTURE.md  CLAUDE.md  README.md  blue-pill.txt  conftest.py  conftest_test.py  justfile  main.py  modal_commit.txt  offload-local.toml  offload-modal-acceptance.toml  offload-modal-release.toml  offload-modal-slow.toml  offload-modal.toml  pyproject.toml  remote_commit_test.txt  shotgun-local.toml  shotgun-modal.toml  style_guide.md  tally_changes.py  test_meta_ratchets.py  tts_test.html
apps/changelings/: CLAUDE.md  README.md  conftest.py  pyproject.toml  style_guide.md
apps/changelings/docs/: design.md  user_story.md
apps/changelings/examples/elena-code/: changeling.toml
apps/changelings/examples/hello-world/: changeling.toml  server.py
apps/changelings/imbue/changelings/: README.md  config.py  config_test.py  conftest.py  data_types.py  errors.py  main.py  main_test.py  mng_commands.py  mngr_commands.py  primitives.py  templates.py  templates_test.py  test_deploy_modal.py  test_ratchets.py  test_run_local.py  test_run_modal.py  testing.py
apps/changelings/scripts/: demo_forwarding_server.py  latency_check.py
apps/changelings/specs/: architecture.md  proxying.md  proxying.py
apps/sculptor_desktop/: pyproject.toml
apps/sculptor_desktop/imbue/sculptor_desktop/: main.py
apps/slack_exporter/: README.md  conftest.py  pyproject.toml
apps/slack_exporter/imbue/slack_exporter/: channels.py  channels_test.py  data_types.py  errors.py  exporter.py  exporter_test.py  latchkey.py  latchkey_test.py  list_channels.py  list_channels_test.py  main.py  main_test.py  primitives.py  store.py  store_test.py  test_ratchets.py  testing.py
libs/concurrency_group/: CLAUDE.md  README.md  pyproject.toml
libs/concurrency_group/imbue/concurrency_group/: concurrency_group.py  concurrency_group_test.py  errors.py  event_utils_test.py  executor.py  executor_test.py  local_process.py  local_process_test.py  subprocess_utils.py  subprocess_utils_test.py  test_ratchets.py  test_utils.py  thread_utils.py
libs/imbue_common/: CLAUDE.md  README.md  pyproject.toml
libs/imbue_common/examples/: ratchets_example.py
libs/imbue_common/imbue/imbue_common/: conftest_hooks.py  conftest_hooks_test.py  enums.py  errors.py  errors_test.py  event_envelope.py  event_envelope_test.py  frozen_model.py  ids.py  ids_test.py  logging.py  logging_test.py  model_update.py  model_update_test.py  mutable_model.py  primitives.py  primitives_test.py  pure_test.py  pytest_utils.py  pytest_utils_test.py  resource_guards.py  resource_guards_test.py  test_profiles_test.py  test_ratchets.py  warm_cli.py  warm_cli_test.py
libs/imbue_common/tests/: test_imbue_core_import.py
libs/llm_live_chat/: conftest.py  pyproject.toml
libs/llm_live_chat/imbue/llm_live_chat/: conftest.py  plugin.py  test_live_chat.py
libs/llm_live_chat/tests/: conftest.py  test_live_chat.py
libs/mng_claude_http/: .gitignore  pyproject.toml
libs/mng_claude_http/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
libs/mng_claude_http/frontend/src/: App.tsx  index.css  types.ts
libs/mng_claude_http/imbue/mng_claude_http/: __main__.py  cli.py  plugin.py  plugin_test.py  primitives.py  primitives_test.py  server.py  server_test.py
libs/mng_recursive/: pyproject.toml
libs/mng_recursive/imbue/mng_recursive/: data_types.py  plugin.py  plugin_test.py  provisioning.py  provisioning_test.py  test_ratchets.py  watcher_common.py
libs/mng_schedule/: README.md  conftest.py  pyproject.toml
libs/mng_schedule/imbue/mng_schedule/: cli.py  cli_test.py  conftest.py  cron_runner.py  data_types.py  data_types_test.py  deploy.py  deploy_test.py  env.py  git.py  git_test.py  plugin.py  plugin_test.py  test_cli.py  test_ratchets.py  test_schedule_add.py
libs/mngr/: README.md  conftest.py  future_specs_triage.txt  llm_faq.md  non_issues.md  pyproject.toml
libs/mngr/.claude/tests_outputs/: coverage_b81a3ed0a5b44e67a87b0e98edec66a9.txt  coverage_bbfe2e613f684949a1f3c08d420e1d4e.txt  slow_tests_22f418d34fa847599e3a33f8e7fdc87b.txt  slow_tests_94929de98107456599d9101de045d2d7.txt  slow_tests_eb7ceb1edee045789867ebb9b5466f25.txt  slow_tests_f7cb02754fd54e078edd2bf05ba762aa.txt
libs/mngr/_meta/: tasks.py
libs/mngr/analysis/: agent-ref-swap-analysis.md  raw-types-2026-01-19.md
libs/mngr/docs/: all_supported_agents.md  api.md  architecture.md  conventions.md  customization.md  nested-tmux.md  principles.md  security_model.md
libs/mngr/docs/concepts/: agent_types.md  agents.md  api.md  environment_variables.md  hosts.md  idle_detection.md  permissions.md  plugins.md  provider_backends.md  providers.md  provisioning.md  snapshot.md
libs/mngr/docs/core_plugins/: agent_data_url.md  default_url_for_cli_agents_via_ttyd.md  git_status.md  host_data_url.md  local_port_forwarding_via_frp_and_nginx.md  offline_mngr_state.md  user_activity_tracking_via_web.md
libs/mngr/docs/guides/: mobile_setup.md
libs/mngr/future_specs/: agent.md  config.md  git_interactions.md  host.md  host_class.md  logging.md  multi_machine_and_mobile.md
libs/mngr/future_specs/plugins/: ask.md  default_url_for_cli_agents_via_ttyd.md
libs/mngr/future_specs/providers/: docker.md
libs/mngr/imbue/mngr/: README.md  conftest.py  coverage_test.py  errors.py  errors_test.py  main.py  main_test.py  plugin_catalog.py  plugin_catalog_test.py  plugin_loader.py  primitives.py  primitives_test.py  test_plugin_loader.py  (+1 more)
libs/mngr/specs/: activity_tracking_implementation_plan.md  agent.md  config.md  error_handling.md  git_interactions.md  host.md  host_class.md  idle_detection.md  locking.md  logging.md  plugins.md  provider_instance.md  provisioning.md  ssh_access.md  standardize_activity_tracking_format.md
libs/mngr/tests/: test_modal_create.py
libs/mngr/tutorials/: mega_tutorial.sh
libs/mngr_opencode/: pyproject.toml
libs/mngr_pair/: conftest.py  pyproject.toml
libs/zygote/: README.md  pyproject.toml  style_guide.md
(+1678 files in other folders)
