[project]
name = "imbue"
version = "0.1.0"
description = "Monorepo for Imbue projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-xdist>=3.8.0",
    "ty>=0.0.8",
    "click>=8.0.0",
]

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff~=0.12.8",
    "pytest>=7.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-split>=0.9.0",
    # really just for debugging slow tests
    "pytest-profiling",
    "line-profiler",
    "import-linter>=2.0",
    "mkdocs-click>=0.9.0",
]

[tool.pytest.ini_options]
# Only timeout the test function itself, not fixtures. This is required because
# --timeout-method=signal sends SIGALRM which kills the entire xdist worker process
# if it fires during fixture setup/teardown (especially the session-scoped cleanup).
timeout_func_only = true
pythonpath = [
  "apps/*",
  "libs/*",
]
testpaths = [
  "apps/*",
  "libs/*",
  "scripts",
]
filterwarnings = [
  # Suppress grpclib warning that occurs during garbage collection when Channel.__del__ is called
  # after the connection's transport has already been cleaned up. This is a known issue in grpclib.
  "ignore:Exception ignored in.*Channel.__del__.*:pytest.PytestUnraisableExceptionWarning",
  # Suppress coverage warning about modules being imported before coverage starts measuring.
  # This happens because pytest collects tests (importing modules) before coverage.py starts.
  "ignore:Module imbue\\..* was previously imported, but not measured:coverage.exceptions.CoverageWarning",
]
addopts = [
  "-n 4",
  "--cov=imbue.mngr",
  "--cov=imbue.imbue_common",
  "--cov=imbue.mngr_opencode",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  # Coverage threshold lowered from 80% to 78% due to SSH-specific file transfer code
  # in hosts/host.py that can only be tested via Modal acceptance tests (requires SSH).
  # The acceptance tests cover these paths when run in CI.
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  # to hopefully see why a worker crashes, rather than just trying to re-run it
  "--max-worker-restart=0",
  # skip acceptance and release tests by default (they require network access)
  "-m not acceptance and not release",
  # make the output more expected for claude--these custom flags suppress the terminal output for coverage and slow tests
  # then it just outputs the path where the output can be found
  "--slow-tests-to-file",
  "--coverage-to-file",
]
markers = [
  "acceptance: marks tests as requiring network access, Modal credentials, etc. These are required to pass in CI",
  "release: marks tests as being required for release (but not for merging PRs)",
  "nomodal: marks tests that need to be fixed before running on modal",
]

[tool.ruff]
line-length = 119
exclude = [
    "**/__snapshots__/**",
    "scripts/style_guide.py",
    "frpc_test",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
#    "T",
#    "SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "imbue",
    "imbue_common",
    "mngr",
    "sculptor_desktop",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.ty.src]
exclude = ["scripts/style_guide.py", "contrib/"]

[tool.coverage.run]
source = ["imbue"]
parallel = true
concurrency = ["multiprocessing"]
omit = [
    "*_test.py",
    "test_*.py",
    "*/tests/*",
    "*/conftest.py",
    # Test utility modules contain helpers only used by tests
    "*/utils/testing.py",
    "libs/imbue_common/imbue/imbue_common/ratchet_testing/ratchets.py",
    # Modal provider requires network access for testing
    "libs/mngr/imbue/mngr/providers/modal/*",
    # don't bother with anything in scripts
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "case _ as unreachable:",
    "assert_never(unreachable)",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "^\\s*\\.\\.\\.$",  # Matches lines containing only "..."
]
skip_empty = true
precision = 2
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.importlinter]
root_package = "imbue"

[[tool.importlinter.contracts]]
name = "mngr layers contract"
type = "layers"
layers = [
    "imbue.mngr.main",
    "imbue.mngr.cli",
    "imbue.mngr.api",
    "imbue.mngr.agents",
    "imbue.mngr.providers",
    "imbue.mngr.hosts",
    "imbue.mngr.interfaces",
    "imbue.mngr.config",
    "imbue.mngr.utils",
    "imbue.mngr.errors",
    "imbue.mngr.primitives",
]
ignore_imports = [
    "imbue.mngr.hosts.test_host -> imbue.mngr.providers.local.instance",
    "imbue.mngr.cli.test_create -> imbue.mngr.main",
    "imbue.mngr.utils.logging_test -> imbue.mngr.config.data_types",
    "imbue.mngr.utils.testing -> imbue.mngr.providers.local.instance",
    "imbue.mngr.utils.testing -> imbue.mngr.config.data_types",
]
