[project]
name = "imbue"
version = "0.1.0"
description = "Monorepo for Imbue projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-xdist>=3.8.0",
    "ty>=0.0.8",
    "click>=8.0.0",
]

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff~=0.12.8",
    "pytest>=7.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-split>=0.9.0",
    # really just for debugging slow tests
    "pytest-profiling",
    "line-profiler",
    "import-linter>=2.0",
    "mkdocs-click>=0.9.0",
]

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
# Only timeout the test function itself, not fixtures. This is required because
# --timeout-method=signal sends SIGALRM which kills the entire xdist worker process
# if it fires during fixture setup/teardown (especially the session-scoped cleanup).
timeout_func_only = true
pythonpath = [
  "apps/*",
  "libs/*",
]
testpaths = [
  "apps/*",
  "libs/*",
  "scripts",
]
addopts = [
  "-n 4",
  "--cov=imbue.mngr",
  "--cov=imbue.imbue_common",
  "--cov=imbue.mngr_opencode",
  "--cov=imbue.changelings",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.ruff]
line-length = 119
exclude = [
    "**/__snapshots__/**",
    "scripts/style_guide.py",
    "frpc_test",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
#    "T",
#    "SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "imbue",
    "imbue_common",
    "mngr",
    "sculptor_desktop",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.ty.src]
exclude = ["scripts/style_guide.py", "contrib/"]

[tool.coverage.run]
source = ["imbue"]
parallel = true
concurrency = ["multiprocessing"]
omit = [
    "*_test.py",
    "test_*.py",
    "*/tests/*",
    "*/conftest.py",
    # Test utility modules contain helpers only used by tests
    "*/utils/testing.py",
    "libs/imbue_common/imbue/imbue_common/ratchet_testing/ratchets.py",
    # Modal provider requires network access for testing
    "libs/mngr/imbue/mngr/providers/modal/*",
    # Changeling deploy modules run on Modal and require infrastructure to test
    "apps/changelings/imbue/changelings/deploy/cron_runner.py",
    "apps/changelings/imbue/changelings/deploy/remote_runner.py",
    "apps/changelings/imbue/changelings/deploy/verification.py",
    # don't bother with anything in scripts
    "scripts/*",
]

[tool.importlinter]
root_package = "imbue"

[[tool.importlinter.contracts]]
name = "mngr layers contract"
type = "layers"
layers = [
    "imbue.mngr.main",
    "imbue.mngr.cli",
    "imbue.mngr.api",
    "imbue.mngr.agents",
    "imbue.mngr.providers",
    "imbue.mngr.hosts",
    "imbue.mngr.interfaces",
    "imbue.mngr.config",
    "imbue.mngr.utils",
    "imbue.mngr.errors",
    "imbue.mngr.primitives",
]
ignore_imports = [
    "imbue.mngr.hosts.test_host -> imbue.mngr.providers.local.instance",
    "imbue.mngr.cli.test_create -> imbue.mngr.main",
    "imbue.mngr.utils.logging_test -> imbue.mngr.config.data_types",
    "imbue.mngr.utils.testing -> imbue.mngr.providers.local.instance",
    "imbue.mngr.utils.testing -> imbue.mngr.config.data_types",
]

[[tool.importlinter.contracts]]
name = "changelings layers contract"
type = "layers"
layers = [
    "imbue.changelings.main",
    "imbue.changelings.cli",
    "imbue.changelings.deploy",
    "imbue.changelings.config",
    "imbue.changelings.mngr_commands",
    "imbue.changelings.data_types",
    "imbue.changelings.errors",
    "imbue.changelings.primitives",
]
