[project]
name = "changelings"
version = "0.1.0"
description = "Nightly autonomous agents that maintain your codebase"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "mngr",
    "imbue-common",
    "modal>=1.3.1",
    "pydantic>=2.0",
    "tomlkit>=0.12.0",
]

[project.scripts]
changeling = "imbue.changelings.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mngr = { workspace = true }
imbue-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.pytest.ini_options]
timeout_func_only = true
testpaths = ["."]
filterwarnings = [
  "ignore:Module imbue\\..* was previously imported, but not measured:coverage.exceptions.CoverageWarning",
]
addopts = [
  "-n 4",
  "--cov=imbue.changelings",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]
markers = [
  "acceptance: marks tests as requiring network access, Modal credentials, etc. These are required to pass in CI",
  "release: marks tests as being required for release (but not for merging PRs)",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "case _ as unreachable:",
  "assert_never(unreachable)",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "^\\s*\\.\\.\\.$",
]
skip_empty = true
precision = 2
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
