[project]
name = "slack-exporter"
version = "0.1.0"
description = "Export Slack channel messages to JSONL using latchkey for authentication"
requires-python = ">=3.11"
dependencies = [
    "imbue-common",
    "pydantic>=2.5.0",
]

[project.scripts]
slack-exporter = "imbue.slack_exporter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
imbue-common = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
    "--no-header",
    "-rN",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
