[project]
name = "concurrency-group"
version = "0.1.0"
description = "Utilities for managing threads and processes in a structured way"
requires-python = ">=3.11"
dependencies = [
    "imbue-common",
    "loguru>=0.7",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
imbue-common = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
