[project]
name = "imbue-common"
version = "0.1.0"
description = "Core libraries for Imbue projects"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "cowsay-python>=1.0.2",
    "deal>=4.24",
    "httpx>=0.27",
    "inline-snapshot>=0.13",
    "loguru>=0.7",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
