[project]
name = "imbue-common"
version = "0.1.0"
description = "Core libraries for Imbue projects"
requires-python = ">=3.11"
# [TODO] Add before merging: license, authors, readme, [project.urls]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "cowsay-python>=1.0.2",
    "httpx>=0.27",
    "inline-snapshot>=0.13",
    "loguru>=0.7",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/utils/testing.py"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
