[project]
name = "llm-live-chat"
version = "0.1.0"
description = "Live chat with SIGUSR1-based external message injection for LLM"
requires-python = ">=3.11"
dependencies = [
    "llm>=0.28",
    "click",
    "sqlite-utils",
]

[project.entry-points."llm"]
llm_live_chat = "imbue.llm_live_chat.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
