[project]
name = "mngr"
version = "0.1.0"
description = "Library for managing AI coding agents across different hosts"
requires-python = ">=3.11"
dependencies = [
    "imbue-common",
    "cel-python>=0.1.5",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "concurrency-group",
    "coolname>=3.0.0",
    "cryptography>=42.0",
    "dockerfile-parse>=2.0.0",
    "modal>=1.3.1",
    "pydantic>=2.0",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "pyinfra>=3.0",
    "pluggy>=1.5.0",
    "tabulate>=0.9.0",
    "tomlkit>=0.12.0",
    "urwid>=2.2.0",
]

[project.scripts]
mngr = "imbue.mngr.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
imbue-common = { workspace = true }
concurrency-group = { workspace = true }

# Shared pytest defaults (markers, filterwarnings, CLI args like -n/--timeout/--durations,
# coverage report settings) are configured in a single place:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# Only project-specific settings belong here.
[tool.pytest.ini_options]
timeout_func_only = true
testpaths = ["."]
addopts = [
  "-n 4",
  "--cov=imbue.mngr",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
  "imbue/mngr/providers/modal/*",
]

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
