[project]
name = "mngr"
version = "0.1.0"
description = "Library for managing AI coding agents across different hosts"
requires-python = ">=3.11"
dependencies = [
    "imbue-common",
    "cel-python>=0.1.5",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "concurrency-group",
    "coolname>=3.0.0",
    "cryptography>=42.0",
    "dockerfile-parse>=2.0.0",
    # pinning for now because more recent versions break how we gather build logs. See here for an attempt to fix, but it is not confirmed working: https://github.com/imbue-ai/mngr/pull/325
    "modal==1.3.1",
    "pydantic>=2.0",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "pyinfra>=3.0",
    "pluggy>=1.5.0",
    "tabulate>=0.9.0",
    "tomlkit>=0.12.0",
    "urwid>=2.2.0",
    "croniter>=1.3.0",
]

[project.scripts]
mngr = "imbue.mngr.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
imbue-common = { workspace = true }
concurrency-group = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
