[project]
name = "mngr"
version = "0.1.0"
description = "Library for managing AI coding agents across different hosts"
requires-python = ">=3.11"
dependencies = [
    "imbue-common",
    "cel-python>=0.1.5",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "concurrency-group",
    "coolname>=3.0.0",
    "cryptography>=42.0",
    "docker>=7.0",
    "dockerfile-parse>=2.0.0",
    # pinning for now because more recent versions break how we gather build logs. See here for an attempt to fix, but it is not confirmed working: https://github.com/imbue-ai/mngr/pull/325
    "modal==1.3.1",
    "pydantic>=2.0",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "pyinfra>=3.0",
    "pluggy>=1.5.0",
    "tabulate>=0.9.0",
    "tenacity>=8.0",
    "tomlkit>=0.12.0",
    "urwid>=2.2.0",
]

[project.scripts]
mngr = "imbue.mngr.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
imbue-common = { workspace = true }
concurrency-group = { workspace = true }

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
testpaths = ["."]
addopts = [
  "-n 4",
  "--cov=imbue.mngr",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=80",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
  "imbue/mngr/providers/modal/*",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
