[project]
name = "mngr-opencode"
version = "0.1.0"
description = "OpenCode agent type plugin for mngr"
requires-python = ">=3.11"
dependencies = [
    "mngr",
]

[project.entry-points.mngr]
opencode = "imbue.mngr_opencode.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mngr = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
